# ari-meeting

./: .gitignore  .mcp.json  .swiftformat  .swiftlint.yml  CLAUDE.md  Cargo.toml  DESIGN.json  DESIGN.md  LICENSE
.claude/: settings.json
.claude/agents/: swift-architect.md  swift-code-reviewer.md  swift-implementer.md  tauri-command-auditor.md
.claude/commands/: build-run.md  implement-feature.md  run-checks.md  swift-build.md  swift-run.md  swift-test.md
.claude/context/: architecture.md  build-and-run.md  open-questions.md  product.md
.claude/hooks/: swift-postedit.sh  swift-session-start.sh
.claude/reference/: ci-and-release.md  llm-prompts-and-templates.md  reid-integration-contract.md
.claude/rules/: agent-model-policy.md  codebase-ownership.md  coding-conventions.md  design-system.md  no-legacy-files.md  platform-and-deps.md  swift-conventions.md  tauri-ipc.md
.claude/skills/grdb/: SKILL.md
.claude/skills/sqlite-schema/: SKILL.md
.xcodebuildmcp/: config.yaml
Ari/: Ari.entitlements  Info.plist
Ari/App/: AppDelegate.swift  AppEnvironment.swift  AppFonts.swift  AriApp.swift
Ari/App/Notifications/: NotificationActionHandler.swift  ReminderRefreshScheduler.swift  SystemNotificationScheduler.swift
Ari/App/Settings/: KeychainSecretStore.swift  StoreBackedRecallSettingsReading.swift  StoreBackedSettingsReading.swift
Ari/Ari.xcodeproj/: project.pbxproj
Ari/Calendar/: CalendarSyncScheduler.swift  EventKitCalendarSource.swift
Ari/Capture/: LiveCaptureService.swift  SpeechLiveTranscriptionService.swift  StubServices.swift
Ari/UI/: README.md
Ari/UI/AppShell/: AboutView.swift  LaunchStatusView.swift  MeetingMoment.swift  RecordingIndicator.swift  RootSplitView.swift  SidebarSection.swift  SidebarView.swift
Ari/UI/Ask/: AskAnswerText.swift  AskCalendarEventCard.swift  AskConsoleView.swift  AskEntityCard.swift  (+8 more)
Ari/scripts/: gen-appicon.mjs
AriKit/: Package.resolved  Package.swift
apple-helper/: Package.swift
ari-engine/: Cargo.toml
ari-engine/src/: embed_models.rs  language_preference.rs  lib.rs  models.rs
ari-engine/src/apple/: mod.rs  resolver.rs  text_cleanup.rs
ari-engine/src/apple/fixtures/: probe.json  probe_result.json  transcribe.json
ari-engine/src/audio/: mod.rs
ari-engine/src/calendar/: models.rs
ari-engine/src/database/: manager.rs  mod.rs  models.rs
ari-engine/src/database/repositories/: ask_conversation.rs  calendar.rs  meeting.rs  meeting_series.rs  mod.rs  person.rs  recall_index.rs  setting.rs  speaker.rs  transcript.rs
ari-engine/src/diarization/: commands.rs  engine.rs  labeling.rs  mod.rs  tuning.rs  voiceprint.rs
ari-engine/src/engine/: context.rs  events.rs  mod.rs  notifier.rs  paths.rs
ari-engine/src/meeting_series/: commands.rs  mod.rs  models.rs
ari-engine/src/persons/: commands.rs  mod.rs  models.rs
ari-engine/src/providers/: anthropic.rs  groq.rs  mod.rs  openai.rs  openrouter.rs
ari-engine/src/providers/ollama/: mod.rs
ari-engine/src/recall/: agent.rs  chunker.rs  commands.rs  context.rs  conversations.rs  embed_models.rs  embed_runtime.rs  embedding.rs  mod.rs  search.rs  shell.rs  stream.rs
ari-engine/src/summary/: claude_cli.rs  commands.rs  llm_client.rs  llm_stream.rs  mod.rs  processor.rs  service.rs  template_commands.rs  template_selector.rs
ari-engine/src/summary/templates/: defaults.rs  mod.rs
ari-engine/src/summary_engine/: mod.rs  sidecar.rs
ari-engine/src/whisper_engine/: mod.rs  parallel_processor.rs  whisper_engine.rs
ari-notch/: .gitignore  Package.swift  README.md
ari-protocol/: Cargo.toml
ari-protocol/src/: lib.rs
brand/: BRAND.md  README.md  tokens.json
diarize-helper/: Cargo.toml  SPIKE_NOTES.md
diarize-helper/src/: main.rs
docs/: BUILDING.md  ari-theme-preview.html  icon-contact-sheet.html
docs/plans/: ari-ask-ui.md  ari-engine-carve.md  ari-recording-page.md  arikit-calendar-ui.md  arikit-calendar.md  arikit-component-library.md  arikit-diarization.md  arikit-engine-extras.md  arikit-engine-providers.md  arikit-models.md  arikit-native-read-ui.md  arikit-native-shell.md  arikit-recall-slice2.md  arikit-recall.md  arikit-store.md  arikit-stt.md  ask-meetings-agentic-tools.md  ask-meetings-tools-and-cards.md  audio-import.md  calendar-series-intelligence.md  custom-vocabulary.md  engine-extraction.md  liquid-glass-adoption.md  live-speaker-id.md  marginalia-review-fixes.md  menu-bar-item.md  native-formatting-menu.md  native-text-formatting.md  notch-panel-absorption.md  onboarding-install-flow.md  people-view-parity.md  person-fact-consolidation.md  rich-summary-editor.md  robust-migration-and-backup.md  settings-audio-devices.md  settings-ui.md  speaker-retag-and-calendar-candidates.md  summary-pipeline-completion.md  summary-progress-streaming.md  swift-meeting-generation-flow.md  (+1 more)
frontend/: CLAUDE.md  README.md  package.json  tailwind.config.js
frontend/scripts/: dev-signed.sh  gen-app-icon.mjs  gen-tray.mjs  run-local.sh
frontend/src-tauri/: CLAUDE.md  CLEANUP_PLAN.md  Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json  tauri.qa.conf.json  tauri.qa.minimum.conf.json  tauri.qa.onboarding.conf.json  tauri.qa.routes.conf.json
llama-helper/src/: main.rs
plans/: apple-intelligence-kickoff-prompt.md  diarization-build-reference.md  diarization-production-plan.md  leverage-apple-models.md  meeting-intelligence-prd.md  notch-ui-technical-requirements.md  speaker-diarization-and-reid.md  swift-migration-plan.md
samples/: README.md
spikes/ask-tools-harness/: .gitignore  Package.resolved  Package.swift
spikes/fluidaudio-s3/: .gitignore  Package.resolved  Package.swift  README.md
spikes/mlx-swift-s1/: .gitignore  Package.resolved  Package.swift  check-citations.py  dump-prompts.mjs
spikes/speechanalyzer-s2/: .gitignore  Package.swift
tools/: README.md  diarization_calibrate.py
tools/diarization-sweep/: .gitignore  README.md  der.py  extract_reference.py  postmerge.py  run_sweep.py
tools/prompt-harness/: .gitignore  README.md  abtest.mjs  compare.mjs  extract.mjs  run.mjs
tools/stt-eval/: extract_parakeet.mjs  score.py
(+923 files in other folders)
