[package]
name = "ari-engine"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

# The headless meeting-intelligence engine — all Tauri-free domain logic
# (audio, transcription, summary, recall, calendar, persons, series,
# diarization, database, providers). Stage B of the ari-engine carve
# (docs/plans/ari-engine-carve.md) moves the decoupled modules here; the Tauri
# host shrinks to command shims that call into this crate. Empty scaffold today
# — B1 fills it module by module.

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
ari-protocol = { path = "../ari-protocol" }
