[package]
name = "ari-engine"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

# The headless meeting-intelligence engine — all Tauri-free domain logic
# (audio, transcription, summary, recall, calendar, persons, series,
# diarization, database, providers). Stage B of the ari-engine carve
# (docs/plans/ari-engine-carve.md) moves the decoupled modules here; the Tauri
# host shrinks to command shims that call into this crate. Empty scaffold today
# — B1 fills it module by module.

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
ari-protocol = { path = "../ari-protocol" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
log = "0.4"
chrono = { version = "0.4.31", features = ["serde"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "chrono"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1.40"
regex = "1.11.0"
once_cell = "1.17.1"
